<resources>
    <string name="app_name">Stradata App</string>

    <!-- Strings related to login -->
    <string name="usuario_sds">User</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_login_in">Logging in please wait&#8230;</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_username">Must not contain only numbers</string>
    <string name="error_search_empty_user">this cannot be empty along with the id</string>
    <string name="error_search_empty_id">this cannot be empty along with the user</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="drawer_item_settings">List</string>
    <string name="drawer_item_home">Search</string>
    <string name="drawer_title_home">Apps</string>

    <string name="tool_name_search">Search Tool</string>
    <string name="tool_name_proc">Proc.</string>
    <string name="tool_name_fisc">Other Fragment</string>
    <string name="tool_menu_percentage">Percentage:</string>
    <string name="tool_menu_name">Search Name</string>
    <string name="tool_menu_id">Identification</string>
    <string name="tool_menu_search_button">Submit</string>
    <string name="tool_search_searching_text">Searching…</string>
    <string name="select_list">All List (to change click me)</string>
    <string name="list_title">Lists: </string>
    <string-array name="tool_menu_options">
        <item>CC</item>
        <item>NIT</item>
        <item>Passport</item>
    </string-array>

    <string name="search_detail_title">Result Coincidence</string>
    <string name="search_detail_subtitle">Search Results</string>
    <string name="button_confirm">Confirm</string>
    <string name="card_title">Coincidence</string>
    <string name="card_name_coincidente">Name:</string>
    <string name="card_phone_number">Phone Numbers: </string>
    <string name="card_id">Stradata Id</string>
    <string name="card_nacionality">Nacionality: </string>
    <string name="error_service_error">An error happened connecting to web service</string>
    <string name="phone_text">The phone numbers are:</string>

    <string name="transition_text_name">list_transition</string>


</resources>
