<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              style="@style/AppTheme"
              android:padding="@dimen/tool_margin">
    <!-- <TextView
        android:background="@color/colorToolBg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tool_name_search"
        android:textColor="@color/colorHintText"
        android:textSize="35sp"/> -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
            android:id="@+id/search_name"
            android:layout_marginTop="@dimen/activity_horizontal_login_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tool_menu_name"
            />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/search_id"
            android:layout_marginTop="@dimen/activity_horizontal_login_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tool_menu_id"
            />
        </android.support.design.widget.TextInputLayout>

        <Spinner
            android:layout_marginTop="@dimen/activity_horizontal_login_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner"/>

        <LinearLayout
            android:layout_marginTop="@dimen/activity_horizontal_login_margin"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:textSize="18sp"
                android:text="@string/tool_menu_percentage"/>
            <SeekBar
                android:id="@+id/seekBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"

                android:max="100"
                />
            <TextView
                android:id="@+id/seekbar_progress"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/search_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_login_margin"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/list_title_transition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="18sp"
                android:text="@string/list_title"
                tools:text="Listas: "
                android:transitionName="@string/transition_text_name"
            />

            <TextView
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/select_list"
                />

    </LinearLayout>


    <Button
        android:layout_marginTop="@dimen/activity_horizontal_login_margin"
        android:id="@+id/form_search_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/tool_menu_search_button"/>

    <LinearLayout
        android:id="@+id/search_status_viewgroup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="invisible"
        >
        <TextView
            android:id="@+id/search_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tool_search_searching_text"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:visibility="gone"
            />
        <ProgressBar

            android:id="@+id/search_progress_bar"
            style="@android:style/Widget.ProgressBar.Inverse"
            android:layout_marginStart="@dimen/item_padding_left"
            android:layout_marginLeft="@dimen/item_padding_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"/>
    </LinearLayout>
    <TextView
        android:id="@+id/search_error_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_red_light"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:visibility="gone"
        />


</LinearLayout>