<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/list_title_transition"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="30sp"
            android:text="@string/list_title"
            tools:text="Listas "
            android:gravity="center"
            android:textColor="@color/colorPrimaryDark"
            android:layout_weight="2"
            android:transitionName="@string/transition_text_name"
            />

        <Button
            android:id="@+id/button_confirm"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/button_confirm"
            style="?android:attr/borderlessButtonStyle"
            android:textColor="?attr/colorAccent"
            />


    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/list_fragment_recycler"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/md_keylines"
        tools:listitem="@layout/list_item"
        android:scrollbars="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </android.support.v7.widget.RecyclerView>
</LinearLayout>