<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".login.LoginActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBg"
    android:orientation="vertical"
    >

    <include
        android:id="@+id/toolbar"

        layout="@layout/menu_toolbar" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_horizontal_login_margin"
        android:layout_marginBottom="@dimen/activity_horizontal_login_margin"
        >

        <ImageView
            android:id="@+id/logo_search"
            android:src="@drawable/logo"
            android:scaleType="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />
        <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:visibility="gone" />
        <EditText
            android:id="@+id/login_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/prompt_login_in"
            android:enabled="false"
            android:visibility="gone"/>
        <LinearLayout
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="2"
            >
            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/usuario_sds"
                android:maxLines="1"
                android:singleLine="true"/>

            <EditText
                android:id="@+id/passwordSds"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorHintText"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:maxLines="1"
                />

            <Button
                android:id="@+id/signinButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/action_sign_in_short"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>