<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_content"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
    
    <android.support.design.widget.CollapsingToolbarLayout
        android:id="@+id/collapsing_toolbar"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        app:contentScrim="@color/colorPrimary"
        app:expandedTitleMarginEnd="@dimen/article_keylines"
        app:expandedTitleMarginStart="@dimen/md_keylines"
        app:layout_scrollFlags="scroll|exitUntilCollapsed"
        >
        <ImageView
            android:id="@+id/image_search"
            android:fitsSystemWindows="true"
            android:src="@drawable/bg_1"
            tools:background="@drawable/bg_1"
            android:scaleType="centerCrop"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_collapseMode="parallax"/>
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_detail"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_collapseMode="pin"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            />
    </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >
        <LinearLayout
            android:textColor="?attr/colorAccent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_login_margin"
            android:paddingRight="@dimen/md_keylines"
            android:paddingTop="@dimen/md_keylines">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                tools:text="Nombre Coincidencia"
                android:text="@string/card_name_coincidente"
                android:textSize="20sp"
                android:layout_marginBottom="@dimen/article_subheading"/>
            <TextView
                android:id="@+id/coincidence_name_detail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="16sp"
                tools:text="Casssasdassd asdasdsasd asdasd asdasds"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                tools:text="Nacionalidad"
                android:text="@string/card_nacionality"
                android:textSize="20sp"
                android:layout_marginTop="@dimen/md_keylines"
                android:layout_marginBottom="@dimen/article_subheading"/>
            <TextView
                android:id="@+id/coincidence_nacionality_detail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="16sp"
                tools:text="Colombia"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                tools:text="Telefono"
                android:text="@string/card_phone_number"
                android:textSize="20sp"
                android:layout_marginTop="@dimen/md_keylines"
                android:layout_marginBottom="@dimen/article_subheading"/>
            <TextView
                android:id="@+id/coincidence_telephone_detail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="16sp"
                tools:text="\u2022 1231232232 \n\u2022 232323232 \n\u2022 3536455"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                tools:text="Stradata Id"
                android:text="@string/card_id"
                android:textSize="20sp"
                android:layout_marginTop="@dimen/md_keylines"
                android:layout_marginBottom="@dimen/article_subheading"/>
        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>